feat: добавить товары

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Рюкзак</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -54,7 +54,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Рюкзак</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -64,7 +64,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Рюкзак</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -74,7 +74,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Рюкзак</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -84,7 +84,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Рюкзак</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -94,7 +94,57 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Рюкзак</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_7.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_8.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_9.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_10.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/backpack_11.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Рюкзак</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -110,7 +160,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Сумка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -120,7 +170,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Сумка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -130,7 +180,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Сумка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -140,7 +190,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Сумка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -150,7 +200,87 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Сумка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_6.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_7.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_8.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_9.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_10.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_11.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_12.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/bag_13.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Сумка</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -166,7 +296,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Ручка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -176,7 +306,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Ручка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -186,7 +316,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Ручка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -196,7 +326,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Ручка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -206,7 +336,7 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Ручка</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -216,7 +346,67 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Набор ручек</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_7.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_8.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_9.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_10.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_11.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pen_12.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Ручка</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -232,7 +422,17 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Карандаш</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_2.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Набор Карандашей</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -242,7 +442,17 @@
                   <div class="item__bttm-panel">
                     <div class="item__descr">
                       <p class="item__name">Набор Карандашей</p>
-                      <p class="item__date">10.10.2010</p>
+                      <p class="item__date"></p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_4.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Набор Карандашей</p>
+                      <p class="item__date"></p>
                     </div>
                     <button class="item__button">Купить</button>
                   </div>
@@ -261,7 +471,47 @@
                   <img class="item__image" src="./images/pencil_6.jpg" />
                   <div class="item__bttm-panel">
                     <div class="item__descr">
-                      <p class="item__name">Набор Карандашей</p>
+                      <p class="item__name">Карандаш автоматический</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_7.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Карандаш восковой</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_8.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Карандаш</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_9.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Карандаш автоматический</p>
+                      <p class="item__date">10.10.2010</p>
+                    </div>
+                    <button class="item__button">Купить</button>
+                  </div>
+                </li>
+                <li class="category__item">
+                  <img class="item__image" src="./images/pencil_10.jpg" />
+                  <div class="item__bttm-panel">
+                    <div class="item__descr">
+                      <p class="item__name">Набор карандашей и точилок</p>
                       <p class="item__date">10.10.2010</p>
                     </div>
                     <button class="item__button">Купить</button>
